test/errors/missing_then.kbn
令甲爲一
令乙爲二
若甲等乙曰辭曰可辭畢
已矣
